welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:15: error: ')' expected but '.' found.
    for (i <- to T.length){
                  ^Array2:23: error: illegal start of simple expression
  }
  ^